src/test/deca/context/invalid/init-void-int.deca
// Description : 
//	 test d'initialisation void <-- int
// Resultats :
//	 6:1: we can't declare an identifier with type void
{
	void n = 1;
}